#Fix - Character modal layout bug

--- a/src/shared/styles/_variables.scss
+++ b/src/shared/styles/_variables.scss
@@ -22,6 +22,7 @@ $bgGradient: linear-gradient(
 // fonts
 $regular: 300;
 $semibold: 400;
+$medium: 500;
 // borders
 $bsm: 7px;
 
